Colaboratory를 통해 생성됨

--- a/2주차_실습_01_이진_논리_회귀의_사본.ipynb
+++ b/2주차_실습_01_이진_논리_회귀의_사본.ipynb
@@ -6,7 +6,6 @@
       "name": "2주차 실습 - 01. 이진 논리 회귀의 사본",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,10 +42,10 @@
       },
       "source": [
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = 'kairess' # username\n",
-        "os.environ['KAGGLE_KEY'] = '7d0443b2dfffc57c94271fd797511896' # key"
+        "os.environ['KAGGLE_USERNAME'] = '' # username\n",
+        "os.environ['KAGGLE_KEY'] = '' # key"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -56,19 +55,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "24516131-e076-41ab-bb69-1f7d7c0cc786"
+        "outputId": "cdcc8b02-3690-4dd1-be23-91e80a81da62"
       },
       "source": [
         "!kaggle datasets download -d heptapod/titanic"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Downloading titanic.zip to /content\n",
             "\r  0% 0.00/10.8k [00:00<?, ?B/s]\n",
-            "\r100% 10.8k/10.8k [00:00<00:00, 10.1MB/s]\n"
+            "\r100% 10.8k/10.8k [00:00<00:00, 18.9MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -81,12 +80,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93ec9aa9-aa4c-4327-dd62-e1a8318d8971"
+        "outputId": "10117b09-3a3d-4d23-e7a5-cdd6a0674ef9"
       },
       "source": [
         "!unzip titanic.zip"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,9 +111,11 @@
         "import matplotlib.pyplot as plt \n",
         "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# 전처리\n",
         "from sklearn.preprocessing import StandardScaler"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,16 +133,16 @@
         "id": "_QeMWOyz4oZh",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 222
+          "height": 223
         },
-        "outputId": "21f9bdc1-1c7b-4460-cdae-59b7660f053e"
+        "outputId": "4b0f8846-bfe3-4d7b-f9bb-e4e186a2ba5f"
       },
       "source": [
         "df = pd.read_csv('train_and_test2.csv')\n",
         "\n",
         "df.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,11 +389,12 @@
         "id": "zLbHlK1oy3t-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 203
         },
-        "outputId": "a2cfc8e8-dd10-439a-ebac-7bd65abc44fa"
+        "outputId": "c35f148a-3d6c-42c8-dcba-da272a3b6869"
       },
       "source": [
+        "# 사용할 column의 이름만 뽑아온다\n",
         "df = pd.read_csv('train_and_test2.csv', usecols=[\n",
         "  'Age', # 나이\n",
         "  'Fare', # 승차 요금\n",
@@ -406,7 +408,7 @@
         "\n",
         "df.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,18 +537,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "5dbf838d-dd58-4a7e-ecde-e893b4ec7600"
+        "outputId": "b158750f-0de5-4016-ee55-d7f8cb75af15"
       },
       "source": [
+        "# 숫자를 셈 (0: 사망, 1: 생존, sex 0: 남, sex 2: 여)\n",
         "sns.countplot(x='Sex', hue='2urvived', data=df)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f7385b2fe48>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f06b5224690>"
             ]
           },
           "metadata": {
@@ -586,18 +589,18 @@
           "height": 298
         },
         "id": "fAeYupYay9yd",
-        "outputId": "0bb8300b-1847-4fc1-955c-1a60fa480fcf"
+        "outputId": "f397749b-056c-4db7-d56f-0bad93e32060"
       },
       "source": [
         "sns.countplot(x=df['2urvived'])"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f73847cdc88>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f06b4e477d0>"
             ]
           },
           "metadata": {
@@ -641,12 +644,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IeBCNa8g4yS5",
-        "outputId": "94fc6df7-e76e-4c98-b78c-34baa3024c11"
+        "outputId": "9f3c6293-ec77-47ab-a982-5225689d3f60"
       },
       "source": [
+        "# dataset에서 빠져있는 경우 있음\n",
+        "# 숫자로 되어있어야 러닝 가능! (문자나 null일 경우 안됨)\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,16 +677,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "77JPnZbM5fov",
-        "outputId": "e20eef51-c575-46a1-fa3a-002459b36867"
+        "outputId": "e041ef6e-940d-46ce-bbbe-5b3a594718ab"
       },
       "source": [
+        "# embarked: 2, 지워지기 전\n",
         "print(len(df))\n",
         "\n",
         "df = df.dropna()\n",
         "\n",
+        "# 지워진 후, 1307개의 dataset!\n",
         "print(len(df))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,18 +714,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 203
         },
         "id": "8DHqVmqN0jLS",
-        "outputId": "c7de5bec-3227-47de-853a-b1d70801456c"
+        "outputId": "47c4193c-d45b-4b2c-f990-507869439b01"
       },
       "source": [
+        "# 생존여부만 제외해서 drop\n",
+        "# 생존여부는 y축으로 두려고 함!\n",
+        "# np.float32로 해야 tensorflow (keras)에서 사용할 수 있다\n",
         "x_data = df.drop(columns=['2urvived'], axis=1)\n",
         "x_data = x_data.astype(np.float32)\n",
         "\n",
         "x_data.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,10 +837,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 203
         },
         "id": "FY6Wpaug0sz5",
-        "outputId": "761103c5-452e-4848-8407-f6b78848d910"
+        "outputId": "57e1be2f-e766-4d2c-987f-a738c7bf5a81"
       },
       "source": [
         "y_data = df[['2urvived']]\n",
@@ -838,7 +848,7 @@
         "\n",
         "y_data.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,16 +938,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C3DX5btu0xI6",
-        "outputId": "9e0e0924-3483-45d0-ebcf-e14297f14def"
+        "outputId": "3f38545e-6391-4c1f-e6de-0a63e5ed3b3e"
       },
       "source": [
         "scaler = StandardScaler()\n",
+        "# x data의 단위가 다 다르니까 표준화 한다.\n",
         "x_data_scaled = scaler.fit_transform(x_data)\n",
         "\n",
+        "# 표준화 전과 후 비교\n",
         "print(x_data.values[0])\n",
         "print(x_data_scaled[0])"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,15 +978,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ehiJ3J1m00A9",
-        "outputId": "b2635131-583c-40f4-84a3-07eb998194bd"
+        "outputId": "2f4c882a-c206-456d-9c30-2d52c820b39c"
       },
       "source": [
+        "# 반드시 학습 데이터와 검증 데이터 분할해야함\n",
+        "# 학습: 80%, 검증 20%\n",
         "x_train, x_val, y_train, y_val = train_test_split(x_data, y_data, test_size=0.2, random_state=2021)\n",
         "\n",
+        "# 1045개로 학습시켜서 262개로 검증한다\n",
         "print(x_train.shape, x_val.shape)\n",
         "print(y_train.shape, y_val.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,67 +1017,83 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DdFgm6wP01vi",
-        "outputId": "f10a1417-bf40-4e53-e535-d85b9679c1e0"
+        "outputId": "e1e90456-7d2d-41e3-f965-2e3b33ded24c"
       },
       "source": [
+        "# logistic regression에서 sigmoid function 사용\n",
+        "\n",
         "model = Sequential([\n",
+        "# Dense: linear regression 1번 하고, sigmoid function 해라!\n",
         "  Dense(1, activation='sigmoid')\n",
         "])\n",
         "\n",
+        "# 이진논리회귀, metrics: loss값 만 보면 얼마나 학습이 잘 되는지 감이 안온다. 감이 잘 잡히도록 씀.\n",
+        "# acc: accuracy (0~1: 1에 가까울수록 정확도 100%)\n",
         "model.compile(loss='binary_crossentropy', optimizer=Adam(lr=0.01), metrics=['acc'])\n",
         "\n",
         "model.fit(\n",
         "    x_train,\n",
         "    y_train,\n",
         "    validation_data=(x_val, y_val), # 검증 데이터를 넣어주면 한 epoch이 끝날때마다 자동으로 검증\n",
-        "    epochs=20 # epochs 복수형으로 쓰기!\n",
-        ")"
+        "    epochs=20 # epochs 복수형으로 쓰기! (20번 반복학습)\n",
+        ")\n",
+        "\n",
+        "# 78% 정도의 정확도를 갖는 생존여부 예측 모델을 만들었다.\n",
+        "# linear regression과의 차이점: sigmoid와 binary_crossentropy를 사용한다는 점이 다르다."
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/optimizer_v2/optimizer_v2.py:375: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  \"The `lr` argument is deprecated, use `learning_rate` instead.\")\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "Epoch 1/20\n",
-            "33/33 [==============================] - 1s 14ms/step - loss: 1.4387 - acc: 0.5671 - val_loss: 0.6340 - val_acc: 0.7290\n",
+            "33/33 [==============================] - 1s 7ms/step - loss: 13.3274 - acc: 0.2756 - val_loss: 5.8387 - val_acc: 0.2519\n",
             "Epoch 2/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.6620 - acc: 0.6820 - val_loss: 0.5659 - val_acc: 0.7176\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 3.4122 - acc: 0.4220 - val_loss: 2.0363 - val_acc: 0.6565\n",
             "Epoch 3/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.6135 - acc: 0.6996 - val_loss: 0.5863 - val_acc: 0.7176\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 1.5333 - acc: 0.6019 - val_loss: 1.0338 - val_acc: 0.6832\n",
             "Epoch 4/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5858 - acc: 0.7097 - val_loss: 0.5198 - val_acc: 0.7901\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 1.0632 - acc: 0.6737 - val_loss: 0.9207 - val_acc: 0.7023\n",
             "Epoch 5/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5483 - acc: 0.7378 - val_loss: 0.4759 - val_acc: 0.7863\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.9835 - acc: 0.6813 - val_loss: 0.7946 - val_acc: 0.7137\n",
             "Epoch 6/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5762 - acc: 0.7348 - val_loss: 0.5827 - val_acc: 0.7595\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.8673 - acc: 0.6938 - val_loss: 0.7355 - val_acc: 0.7519\n",
             "Epoch 7/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5302 - acc: 0.7514 - val_loss: 0.4506 - val_acc: 0.7939\n",
+            "33/33 [==============================] - 0s 3ms/step - loss: 0.7853 - acc: 0.6919 - val_loss: 0.6566 - val_acc: 0.7519\n",
             "Epoch 8/20\n",
-            "33/33 [==============================] - 0s 3ms/step - loss: 0.5047 - acc: 0.7469 - val_loss: 0.5182 - val_acc: 0.7634\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.6892 - acc: 0.6986 - val_loss: 0.5836 - val_acc: 0.7252\n",
             "Epoch 9/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5010 - acc: 0.7773 - val_loss: 0.4583 - val_acc: 0.7824\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.6259 - acc: 0.7177 - val_loss: 0.5321 - val_acc: 0.7290\n",
             "Epoch 10/20\n",
-            "33/33 [==============================] - 0s 6ms/step - loss: 0.4857 - acc: 0.7792 - val_loss: 0.4894 - val_acc: 0.7863\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.5722 - acc: 0.7282 - val_loss: 0.5041 - val_acc: 0.7366\n",
             "Epoch 11/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4865 - acc: 0.7604 - val_loss: 0.4460 - val_acc: 0.7824\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.5453 - acc: 0.7330 - val_loss: 0.4729 - val_acc: 0.7557\n",
             "Epoch 12/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4989 - acc: 0.7605 - val_loss: 0.6511 - val_acc: 0.7366\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.5366 - acc: 0.7426 - val_loss: 0.4696 - val_acc: 0.7634\n",
             "Epoch 13/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5357 - acc: 0.7623 - val_loss: 0.4556 - val_acc: 0.7863\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.5039 - acc: 0.7579 - val_loss: 0.4657 - val_acc: 0.7748\n",
             "Epoch 14/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4885 - acc: 0.7642 - val_loss: 0.4507 - val_acc: 0.7863\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4997 - acc: 0.7608 - val_loss: 0.4483 - val_acc: 0.7824\n",
             "Epoch 15/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4896 - acc: 0.7911 - val_loss: 0.4516 - val_acc: 0.7786\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4884 - acc: 0.7684 - val_loss: 0.4472 - val_acc: 0.7863\n",
             "Epoch 16/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.5004 - acc: 0.7634 - val_loss: 0.5177 - val_acc: 0.7710\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4834 - acc: 0.7761 - val_loss: 0.4428 - val_acc: 0.7824\n",
             "Epoch 17/20\n",
-            "33/33 [==============================] - 0s 3ms/step - loss: 0.4963 - acc: 0.7683 - val_loss: 0.4357 - val_acc: 0.7863\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4985 - acc: 0.7732 - val_loss: 0.5555 - val_acc: 0.7557\n",
             "Epoch 18/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4854 - acc: 0.7887 - val_loss: 0.4805 - val_acc: 0.7786\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4845 - acc: 0.7713 - val_loss: 0.4362 - val_acc: 0.7824\n",
             "Epoch 19/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4833 - acc: 0.7797 - val_loss: 0.4408 - val_acc: 0.7863\n",
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4920 - acc: 0.7856 - val_loss: 0.4341 - val_acc: 0.7824\n",
             "Epoch 20/20\n",
-            "33/33 [==============================] - 0s 2ms/step - loss: 0.4796 - acc: 0.7761 - val_loss: 0.4789 - val_acc: 0.7863\n"
+            "33/33 [==============================] - 0s 2ms/step - loss: 0.4793 - acc: 0.7847 - val_loss: 0.4634 - val_acc: 0.7863\n"
           ],
           "name": "stdout"
         },
@@ -1070,13 +1101,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f7380256940>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f06b1095f10>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
