Colaboratory를 통해 생성됨

--- a/2주차_실습_02_다항_논리_회귀의_사본.ipynb
+++ b/2주차_실습_02_다항_논리_회귀의_사본.ipynb
@@ -41,11 +41,13 @@
         "id": "rQAW9z95hgG-"
       },
       "source": [
+        "# 와인 종류 예측\n",
+        "# 와인의 도수, 산도, 색 등을 이용해서 3개의 클래스로 분류\n",
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = 'kairess' # username\n",
-        "os.environ['KAGGLE_KEY'] = '7d0443b2dfffc57c94271fd797511896' # key"
+        "os.environ['KAGGLE_USERNAME'] = '' # username\n",
+        "os.environ['KAGGLE_KEY'] = '' # key"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -55,19 +57,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o_GrjeU3hkQP",
-        "outputId": "b972e378-eb3f-4494-b466-fb1b1b96c219"
+        "outputId": "1b707040-9511-4e73-8f87-4a1b8c4b6d0f"
       },
       "source": [
         "!kaggle datasets download -d brynja/wineuci"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Downloading wineuci.zip to /content\n",
             "\r  0% 0.00/4.20k [00:00<?, ?B/s]\n",
-            "\r100% 4.20k/4.20k [00:00<00:00, 8.26MB/s]\n"
+            "\r100% 4.20k/4.20k [00:00<00:00, 1.67MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -80,12 +82,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vMzoglQqhunm",
-        "outputId": "85922194-72fc-48a1-d34c-2095d39b25d6"
+        "outputId": "ff335361-3bc5-45ce-a22e-14a1d6c47510"
       },
       "source": [
         "!unzip wineuci.zip"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,9 +114,11 @@
         "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# 다항논리회귀: 반드시 1-hot encoder 사용해야 하므로 import 한다.\n",
         "from sklearn.preprocessing import OneHotEncoder"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -131,17 +135,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 203
         },
         "id": "KOJz_mGv7axc",
-        "outputId": "4d5cb696-c8b9-47bb-c7d5-36df66fe9e5b"
+        "outputId": "be157afe-5018-4c37-d037-6e029e233ebe"
       },
       "source": [
         "df = pd.read_csv('Wine.csv')\n",
         "\n",
         "df.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,12 +309,14 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 222
+          "height": 223
         },
         "id": "Mo8_P6FRhwk8",
-        "outputId": "61e6caae-c1fc-4aa4-dfc4-be1bc06b6044"
+        "outputId": "9f40571a-a5f6-45cf-e034-338315d19c48"
       },
       "source": [
+        "# dataset의 header에 이름이 없어서, 직접 넣어준다\n",
+        "# y data는 1, 2, 3으로 나올 것\n",
         "df = pd.read_csv('Wine.csv', names=[\n",
         "  'name'\n",
         "  ,'alcohol'\n",
@@ -330,7 +336,7 @@
         "\n",
         "df.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -547,12 +553,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Iz-fPgk9JWH",
-        "outputId": "61ba3551-a087-4037-cef4-eaa75ec0086d"
+        "outputId": "29937ed3-b685-471f-b34d-39e97030b8f7"
       },
       "source": [
+        "# 이진 논리 회귀 때처럼 확인.\n",
+        "# 모두 0으로 비어있는 행이 없으면 좋은 데이터!\n",
+        "# 비어있는 행을 지워줄 필요 x\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,18 +600,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 222
+          "height": 223
         },
         "id": "fpXNqr30jDkG",
-        "outputId": "2b93f70a-9757-4b85-da98-192d859093cb"
+        "outputId": "6d7d42c6-3d70-4227-c02f-b98966ce91f8"
       },
       "source": [
+        "# name column만을 제외하고 drop\n",
         "x_data = df.drop(columns=['name'], axis=1)\n",
         "x_data = x_data.astype(np.float32)\n",
         "\n",
         "x_data.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +750,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -749,18 +759,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 203
         },
         "id": "_GlvfShBh6yf",
-        "outputId": "047937a9-d8b6-4626-a80e-29836fead9c6"
+        "outputId": "13a2990a-1d0e-43f7-e072-22fa29681cfe"
       },
       "source": [
+        "# name만 넣어준다\n",
         "y_data = df[['name']]\n",
         "y_data = y_data.astype(np.float32)\n",
         "\n",
         "y_data.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,7 +835,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -844,16 +855,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UI4Fcz3Xj45D",
-        "outputId": "b13f89d6-e7c2-473f-f0dd-8b05a44c6e45"
+        "outputId": "f663e783-5e9c-409e-c417-4ea732c537bd"
       },
       "source": [
+        "# 표준화한다!, x data만!\n",
         "scaler = StandardScaler()\n",
         "x_data_scaled = scaler.fit_transform(x_data)\n",
         "\n",
+        "# 표준화 하기전과 후 비교\n",
         "print(x_data.values[0])\n",
         "print(x_data_scaled[0])"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,16 +897,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ui8eJftDkTsM",
-        "outputId": "cef9e077-3855-4341-839f-2ce4ea11bbe7"
+        "outputId": "f3e0019b-cf7a-44ab-8e99-60a470f652b1"
       },
       "source": [
+        "# y label data로 one hot encoding\n",
+        "# 1 -> [1 0 0]\n",
+        "# 2 -> [0 1 0]\n",
+        "# 3 -> [0 0 1]\n",
         "encoder = OneHotEncoder()\n",
+        "\n",
+        "# array로 바꿔준다\n",
         "y_data_encoded = encoder.fit_transform(y_data).toarray()\n",
         "\n",
         "print(y_data.values[0])\n",
         "print(y_data_encoded[0])"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,15 +940,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r4WweclSjOU6",
-        "outputId": "261f9734-a4a0-4da7-8dcd-b89dfd65fb01"
+        "outputId": "c8a24fb7-4ce8-4bb4-fcfa-ca714070e7a1"
       },
       "source": [
+        "# 80% 학습, 20% 검증 데이터(test_size = 0.2)\n",
         "x_train, x_val, y_train, y_val = train_test_split(x_data_scaled, y_data_encoded, test_size=0.2, random_state=2021)\n",
         "\n",
+        "# 142 학습 data, 36개 검증 data, 13: x에서 사용하는 feature data, 3: 와인의 종류 개수\n",
         "print(x_train.shape, x_val.shape)\n",
         "print(y_train.shape, y_val.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,10 +978,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2qnrvyiJjQz_",
-        "outputId": "641b813b-449d-4d28-f07a-4049b17a7371"
+        "outputId": "65b424ba-42be-41d0-fa8d-7d66d306b5a3"
       },
       "source": [
         "model = Sequential([\n",
+        "                    # 와인 세종류를 예측해야하므로 dense: 3, 다항논리회귀이므로 softmax 사용 (sigmoid x) \n",
         "  Dense(3, activation='softmax')\n",
         "])\n",
         "\n",
@@ -971,53 +993,64 @@
         "    y_train,\n",
         "    validation_data=(x_val, y_val), # 검증 데이터를 넣어주면 한 epoch이 끝날때마다 자동으로 검증\n",
         "    epochs=20 # epochs 복수형으로 쓰기!\n",
-        ")"
+        ")\n",
+        "\n",
+        "# 트레이닝은 100%, 검증은 90%대\n",
+        "# 즉, 어떤 데이터를 넣었을 때, 90%대의 확률로 와인 분류해준다."
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/optimizer_v2/optimizer_v2.py:375: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  \"The `lr` argument is deprecated, use `learning_rate` instead.\")\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "Epoch 1/20\n",
-            "5/5 [==============================] - 1s 115ms/step - loss: 1.2892 - acc: 0.3798 - val_loss: 1.0719 - val_acc: 0.4444\n",
+            "5/5 [==============================] - 1s 41ms/step - loss: 1.4380 - acc: 0.2535 - val_loss: 0.9140 - val_acc: 0.5278\n",
             "Epoch 2/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.6915 - acc: 0.7560 - val_loss: 0.6363 - val_acc: 0.7222\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.8239 - acc: 0.6620 - val_loss: 0.5469 - val_acc: 0.7778\n",
             "Epoch 3/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.4333 - acc: 0.8604 - val_loss: 0.4207 - val_acc: 0.8333\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.5004 - acc: 0.8239 - val_loss: 0.3706 - val_acc: 0.9444\n",
             "Epoch 4/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.2794 - acc: 0.9227 - val_loss: 0.3199 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.3332 - acc: 0.9085 - val_loss: 0.2884 - val_acc: 0.9167\n",
             "Epoch 5/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.1802 - acc: 0.9590 - val_loss: 0.2684 - val_acc: 0.8611\n",
+            "5/5 [==============================] - 0s 8ms/step - loss: 0.2425 - acc: 0.9507 - val_loss: 0.2423 - val_acc: 0.9167\n",
             "Epoch 6/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.1637 - acc: 0.9548 - val_loss: 0.2342 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.1899 - acc: 0.9577 - val_loss: 0.2149 - val_acc: 0.9167\n",
             "Epoch 7/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.1260 - acc: 0.9840 - val_loss: 0.2099 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 8ms/step - loss: 0.1560 - acc: 0.9577 - val_loss: 0.1951 - val_acc: 0.9444\n",
             "Epoch 8/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.1150 - acc: 0.9788 - val_loss: 0.1912 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.1336 - acc: 0.9577 - val_loss: 0.1746 - val_acc: 0.9444\n",
             "Epoch 9/20\n",
-            "5/5 [==============================] - 0s 13ms/step - loss: 0.0923 - acc: 0.9910 - val_loss: 0.1774 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.1147 - acc: 0.9648 - val_loss: 0.1606 - val_acc: 0.9444\n",
             "Epoch 10/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.0884 - acc: 0.9814 - val_loss: 0.1647 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.1014 - acc: 0.9789 - val_loss: 0.1474 - val_acc: 0.9444\n",
             "Epoch 11/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.0819 - acc: 0.9832 - val_loss: 0.1561 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0917 - acc: 0.9789 - val_loss: 0.1381 - val_acc: 0.9444\n",
             "Epoch 12/20\n",
-            "5/5 [==============================] - 0s 13ms/step - loss: 0.0750 - acc: 0.9832 - val_loss: 0.1503 - val_acc: 0.8889\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0827 - acc: 0.9789 - val_loss: 0.1322 - val_acc: 0.9722\n",
             "Epoch 13/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.0635 - acc: 1.0000 - val_loss: 0.1451 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0773 - acc: 0.9789 - val_loss: 0.1272 - val_acc: 0.9722\n",
             "Epoch 14/20\n",
-            "5/5 [==============================] - 0s 49ms/step - loss: 0.0546 - acc: 1.0000 - val_loss: 0.1392 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0718 - acc: 0.9930 - val_loss: 0.1245 - val_acc: 0.9722\n",
             "Epoch 15/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.0633 - acc: 1.0000 - val_loss: 0.1360 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 8ms/step - loss: 0.0670 - acc: 0.9930 - val_loss: 0.1228 - val_acc: 0.9722\n",
             "Epoch 16/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.0528 - acc: 1.0000 - val_loss: 0.1339 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 8ms/step - loss: 0.0630 - acc: 1.0000 - val_loss: 0.1211 - val_acc: 0.9722\n",
             "Epoch 17/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.0544 - acc: 1.0000 - val_loss: 0.1329 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0596 - acc: 1.0000 - val_loss: 0.1194 - val_acc: 0.9444\n",
             "Epoch 18/20\n",
-            "5/5 [==============================] - 0s 11ms/step - loss: 0.0447 - acc: 1.0000 - val_loss: 0.1313 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 8ms/step - loss: 0.0566 - acc: 1.0000 - val_loss: 0.1175 - val_acc: 0.9444\n",
             "Epoch 19/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.0470 - acc: 1.0000 - val_loss: 0.1291 - val_acc: 0.9167\n",
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0539 - acc: 1.0000 - val_loss: 0.1162 - val_acc: 0.9444\n",
             "Epoch 20/20\n",
-            "5/5 [==============================] - 0s 12ms/step - loss: 0.0406 - acc: 1.0000 - val_loss: 0.1284 - val_acc: 0.9167\n"
+            "5/5 [==============================] - 0s 7ms/step - loss: 0.0513 - acc: 1.0000 - val_loss: 0.1155 - val_acc: 0.9444\n"
           ],
           "name": "stdout"
         },
@@ -1025,13 +1058,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fb2ff6e5630>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f5d4593f310>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 17
         }
       ]
     },
