Colaboratory를 통해 생성됨

--- a/homework_2_weeks.ipynb
+++ b/homework_2_weeks.ipynb
@@ -6,7 +6,7 @@
       "name": "homework 2 weeks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOE7hgPSSxcIpqt7xqxVX2J",
+      "authorship_tag": "ABX9TyN6d3224LBc2sAHpJPMuqKb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,8 +44,8 @@
         "# outcome: y (0, 1), 나머지: x\n",
         "\n",
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = 'seunghyeongyoo'                # username\n",
-        "os.environ['KAGGLE_KEY'] = '54a6a8a6be62fbcbeede8ac5678cba20'   # key\n",
+        "os.environ['KAGGLE_USERNAME'] = ''                # username\n",
+        "os.environ['KAGGLE_KEY'] = ''                     # key\n",
         "\n",
         "!kaggle datasets download -d kandij/diabetes-dataset\n",
         "!unzip diabetes-dataset.zip\n",
