--- a/3주차_실습_01_딥러닝_XOR의_사본.ipynb
+++ b/3주차_실습_01_딥러닝_XOR의_사본.ipynb
@@ -35,7 +35,7 @@
         "from tensorflow.keras.layers import Dense\n",
         "from tensorflow.keras.optimizers import Adam, SGD"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "x_data = np.array([[0, 0], [0, 1], [1, 0], [1, 1]], dtype=np.float32)\n",
         "y_data = np.array([[0], [1], [1], [0]], dtype=np.float32)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,24 +77,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oqpq8Z9UW5z7",
-        "outputId": "2573273c-2b25-48d1-d5b1-23a8142d16de"
+        "outputId": "03d7e690-e221-4ea8-eb09-a9e7554978d4"
       },
       "source": [
+        "# 이진논리회귀로는 풀리지 않는다\n",
+        "# 실제로 볼 것임\n",
         "model = Sequential([\n",
         "  Dense(1, activation='sigmoid')\n",
         "])\n",
         "\n",
         "model.compile(loss='binary_crossentropy', optimizer=SGD(lr=0.1))\n",
         "\n",
+        "# verbose=0 : 출력하지마라 (출력 1000개가 너무 많아서)\n",
         "model.fit(x_data, y_data, epochs=1000, verbose=0)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/optimizer_v2/optimizer_v2.py:375: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  \"The `lr` argument is deprecated, use `learning_rate` instead.\")\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f4713f04d30>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fdd7ec38d90>"
             ]
           },
           "metadata": {
@@ -111,22 +122,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "atwdM_sYXhJS",
-        "outputId": "c7156e3a-db48-4082-db70-5eb9f5ad0818"
+        "outputId": "482ba67a-9b67-456f-d810-ba6ebd7c9ec4"
       },
       "source": [
         "y_pred = model.predict(x_data)\n",
         "\n",
+        "# 거의 0.5에 가까운 값이 나왔다.\n",
+        "# 즉, 실패\n",
         "print(y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.50033224]\n",
-            " [0.50024545]\n",
-            " [0.4998588 ]\n",
-            " [0.49977204]]\n"
+            "[[0.49650922]\n",
+            " [0.49964508]\n",
+            " [0.49925926]\n",
+            " [0.50239515]]\n"
           ],
           "name": "stdout"
         }
@@ -148,11 +161,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m7K9HNdkXuQS",
-        "outputId": "b41a339d-bf94-4dd2-ae62-b8593ff0802c"
+        "outputId": "d4d05cb0-1fd2-450f-ff06-3b789a84e7af"
       },
       "source": [
         "model = Sequential([\n",
+        "                    # hidden layer 지정 - 8개의 layer\n",
+        "                    # ReLU 이용\n",
         "  Dense(8, activation='relu'),\n",
+        "  # 출력은 하나짜리로\n",
         "  Dense(1, activation='sigmoid'),\n",
         "])\n",
         "\n",
@@ -160,13 +176,21 @@
         "\n",
         "model.fit(x_data, y_data, epochs=1000, verbose=0)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/optimizer_v2/optimizer_v2.py:375: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  \"The `lr` argument is deprecated, use `learning_rate` instead.\")\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f47117cfcc0>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fdd71536950>"
             ]
           },
           "metadata": {
@@ -183,22 +207,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1exYIaf2X3Vm",
-        "outputId": "3de0030b-d092-4522-9f8c-f6dd6a9a32b4"
+        "outputId": "0a4932ba-1084-4d89-d6d5-c343c5b61f42"
       },
       "source": [
         "y_pred = model.predict(x_data)\n",
         "\n",
+        "# hidden layer 하나 추가해서\n",
+        "# [[0] [1] [1] [0]]에 가까운 값이 나왔다.\n",
         "print(y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.03348094]\n",
-            " [0.887605  ]\n",
-            " [0.98377913]\n",
-            " [0.0241524 ]]\n"
+            "[[0.0219976 ]\n",
+            " [0.98667216]\n",
+            " [0.9684249 ]\n",
+            " [0.019701  ]]\n"
           ],
           "name": "stdout"
         }
