--- a/3주차_실습_01_딥러닝_XOR의_사본.ipynb
+++ b/3주차_실습_01_딥러닝_XOR의_사본.ipynb
@@ -249,12 +249,15 @@
         "id": "esLNf0O9aoG0"
       },
       "source": [
+        "# 실제 실무에선 sequential API에 비해 functional API를 많이 쓴다\n",
+        "# 실무에서는 순서대로 쌓는 network 잘 없다.\n",
+        "# model 이란 class 쓸 것, 그리고 input layer 필요\n",
         "import numpy as np\n",
         "from tensorflow.keras.models import Sequential, Model\n",
         "from tensorflow.keras.layers import Dense, Input\n",
         "from tensorflow.keras.optimizers import Adam, SGD"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -275,33 +278,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HunEvs9faHfD",
-        "outputId": "73300550-0fab-4480-a594-a954e7b71e8b"
+        "outputId": "8dad1369-1e23-4518-ce80-998c98ffef0e"
       },
       "source": [
+        "# x1, x2 : shape이 2인 input 필요\n",
+        "# hidden에 input layer를 넣어줌\n",
+        "# 이후, output에 hidden layer 넣어줌\n",
+        "\n",
         "input = Input(shape=(2,))\n",
         "hidden = Dense(8, activation='relu')(input)\n",
         "output = Dense(1, activation='sigmoid')(hidden)\n",
         "\n",
+        "# 정의할 때, sequential 대신 model로!\n",
+        "# 변수명 inputs, outputs인 이유는 여러개의 input과 output으로 나오는 경우가 많기 때문에\n",
         "model = Model(inputs=input, outputs=output)\n",
         "\n",
         "model.compile(loss='binary_crossentropy', optimizer=SGD(lr=0.1))\n",
         "\n",
+        "# model의 개요를 볼 수 있다\n",
+        "# input layer에서 출력: 2\n",
+        "# hidden layer: 8\n",
+        "# output layer: 1\n",
+        "# none: batch size 개수\n",
+        "# non-trainable params: 트레이닝을 하지 않는 노드\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"model_1\"\n",
+            "Model: \"model\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_2 (InputLayer)         [(None, 2)]               0         \n",
+            "input_1 (InputLayer)         [(None, 2)]               0         \n",
             "_________________________________________________________________\n",
-            "dense_5 (Dense)              (None, 8)                 24        \n",
+            "dense_3 (Dense)              (None, 8)                 24        \n",
             "_________________________________________________________________\n",
-            "dense_6 (Dense)              (None, 1)                 9         \n",
+            "dense_4 (Dense)              (None, 1)                 9         \n",
             "=================================================================\n",
             "Total params: 33\n",
             "Trainable params: 33\n",
@@ -309,6 +324,14 @@
             "_________________________________________________________________\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/optimizer_v2/optimizer_v2.py:375: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  \"The `lr` argument is deprecated, use `learning_rate` instead.\")\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
@@ -319,7 +342,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p-a-DOJDX6tH",
-        "outputId": "b43a4a39-07e8-4117-aa46-dd2b095c785d"
+        "outputId": "cf3c99ec-a0cf-49c5-a8ea-ce5f2cf9943c"
       },
       "source": [
         "model.fit(x_data, y_data, epochs=1000, verbose=0)\n",
@@ -328,15 +351,15 @@
         "\n",
         "print(y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.02292162]\n",
-            " [0.989807  ]\n",
-            " [0.98963356]\n",
-            " [0.00882056]]\n"
+            "[[0.06539059]\n",
+            " [0.9886636 ]\n",
+            " [0.98879075]\n",
+            " [0.0077078 ]]\n"
           ],
           "name": "stdout"
         }
